--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,4 +1,5 @@
 {
+  "setting": {},
   "condition": {
     "plugin": {
       "list": []
@@ -14,6 +15,12 @@
         {
           "name": "购物车",
           "pathName": "pages/cart/cart",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "首页编译",
+          "pathName": "pages/home/home",
           "scene": null
         }
       ]
